VeraSandBox2016/src/objects/Outreach__c.object
<CustomObject>
    <fields>
        <fullName>AW_Acc_Mech__c</fullName>
        <inlineHelpText>Outreach allowed to raise awareness about Accountability Mechanisms</inlineHelpText>
        <label>AW Acc Mech</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_COMP__c</fullName>
        <inlineHelpText>Outreach allowed to raise awareness about Complementarity</inlineHelpText>
        <label>AW COMP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_CVIC__c</fullName>
        <inlineHelpText>Outreach allowed to raise awareness about CVIC</inlineHelpText>
        <label>AW CVIC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_FIAR__c</fullName>
        <inlineHelpText>Outreach allowed to raise awareness about about FIAR</inlineHelpText>
        <label>AW FIAR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_FOR__c</fullName>
        <inlineHelpText>Outreach allowed to raise awareness about JRR</inlineHelpText>
        <label>AW FOR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_FR__c</fullName>
        <inlineHelpText>Outreach allowed to raise awareness about Mentoring First Responders</inlineHelpText>
        <label>AW FR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_JRR__c</fullName>
        <inlineHelpText>Outreach allowed to raise awareness about JRR</inlineHelpText>
        <label>AW JRR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_SGBV__c</fullName>
        <inlineHelpText>Outreach allowed to raise awareness about SGBV</inlineHelpText>
        <label>AW SGBV</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AW_Standards__c</fullName>
        <inlineHelpText>Outreach allowed to raise awareness about Standards</inlineHelpText>
        <label>AW Standards</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outreach</relationshipLabel>
        <relationshipName>Outreach</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>COMP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Complementarity</inlineHelpText>
        <label>COMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CVIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Com_Type__c</fullName>
        <label>Com Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_OR__c</fullName>
        <inlineHelpText>Was this outreach made at an event?</inlineHelpText>
        <label>Event OR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you have selected YES under EVENT OR, please select the event, otherwise leave blank</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Outreach</relationshipLabel>
        <relationshipName>Outreach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FIAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FIAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FOR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Forensics</inlineHelpText>
        <label>FOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>First Responders</inlineHelpText>
        <label>FR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_up_Actions__c</fullName>
        <inlineHelpText>Follow-up Actions</inlineHelpText>
        <label>F-up Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>F_up_Deadline__c</fullName>
        <inlineHelpText>Follow-up Deadline</inlineHelpText>
        <label>F-up Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_up__c</fullName>
        <inlineHelpText>Follow-up</inlineHelpText>
        <label>F-up</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Usefulness__c</fullName>
        <inlineHelpText>1= Very Poor
2= Poor
3= OK
4= Good
5= Very Good</inlineHelpText>
        <label>General Usefulness</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JRR_Off_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JRR Off 1</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Outreach</relationshipLabel>
        <relationshipName>Outreach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JRR_Off_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JRR Off 2</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Outreach (JRR Off 2)</relationshipLabel>
        <relationshipName>Outreach1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lessons_Learned_Details__c</fullName>
        <label>Lessons Learned Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lessons_Learned__c</fullName>
        <label>Lessons Learned</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MENA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MENA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Contacts__c</fullName>
        <label>New Contacts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Information__c</fullName>
        <label>New Information</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OR_Type__c</fullName>
        <label>OR Type</label>
        <picklist>
            <picklistValues>
                <fullName>STA-IGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO-CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Venue__c</fullName>
        <inlineHelpText>If you have selected NO under EVENT OR, please indicate the venue, otherwise leave blank</inlineHelpText>
        <label>Other Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prob_Coop__c</fullName>
        <inlineHelpText>Probability (%) that a cooperation comes out of this outreach effort</inlineHelpText>
        <label>Prob. Coop.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prob_Funding__c</fullName>
        <inlineHelpText>Probability (%) that funding comes out of this outreach effort</inlineHelpText>
        <label>Prob. Funding</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prob_Mission__c</fullName>
        <inlineHelpText>Probability (%) that a mission comes out of this outreach effort</inlineHelpText>
        <label>Prob. Mission</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prob_Training__c</fullName>
        <inlineHelpText>Probability (%) that a training comes out of this outreach effort</inlineHelpText>
        <label>Prob. Training</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Raised_AW_Details__c</fullName>
        <inlineHelpText>Details about raised awareness</inlineHelpText>
        <label>Raised AW Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SGBV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SGBV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2011_Syria_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2011 Syria Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2014_Iraq_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2014 Iraq Conflict</label>
        <type>Checkbox</type>
    </fields>
    <label>Outreach</label>
    <listViews>
        <fullName>All_Outreach</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Subject__c</columns>
        <columns>Date__c</columns>
        <columns>Com_Type__c</columns>
        <columns>JRR_Off_1__c</columns>
        <columns>F_up__c</columns>
        <columns>F_up_Deadline__c</columns>
        <columns>Event_OR__c</columns>
        <columns>Event__c</columns>
        <columns>General_Usefulness__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Outreach</label>
    </listViews>
    <nameField>
        <displayFormat>ORT-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Event_OR_Event_Required</fullName>
        <active>true</active>
        <description>If Event OR=True, the Event must be specified</description>
        <errorConditionFormula>AND(ISPICKVAL( Event_OR__c , &quot;Yes&quot;), ISBLANK( Event__c ) )</errorConditionFormula>
        <errorDisplayField>Event__c</errorDisplayField>
        <errorMessage>If you have selected YES under EVENT OR, please select the event, otherwise leave blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_OR_Venue_Required</fullName>
        <active>true</active>
        <description>If EVENT OUTREACH = No, then &quot;Other Venue&quot; should be specified</description>
        <errorConditionFormula>AND( ISPICKVAL( Event_OR__c , &quot;No&quot;) , ISBLANK( Other_Venue__c ) )</errorConditionFormula>
        <errorDisplayField>Other_Venue__c</errorDisplayField>
        <errorMessage>If you have selected NO under EVENT OR, please indicate the venue, otherwise leave blank</errorMessage>
    </validationRules>
</CustomObject>